[package]
name = "wincc-unified-debug-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
urlencoding = "2.1.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
